fix: Ensure text does not wrap in AppLink component for consistent styling

--- a/src/components/appLink/appLink.scss
+++ b/src/components/appLink/appLink.scss
@@ -2,6 +2,7 @@
     a, span {
         @include link-styles;
         // text-transform: capitalize;
+        text-wrap: nowrap;
     }
 }
 
